Update docs added in swagger
